tests/tests2/96_nodata_wanted.expect
[test_static_data_error]
96_nodata_wanted.c:7: error: initializer element is not computable at load time

[test_static_nodata_error]
96_nodata_wanted.c:14: error: initializer element is not computable at load time

[test_global_data_error]
96_nodata_wanted.c:20: error: initializer element is not computable at load time

[test_local_data_noerror]
96_nodata_wanted.c:25: warning: assignment makes integer from pointer without a cast
96_nodata_wanted.c:25: warning: nonportable conversion from pointer to char/short

[test_data_suppression]
suppression off
  static data: 8 - 8.0 - 8.0 - main - static string
  static bitfields: 333 44 555555 6 7
  data length is not 0
  text length is not 0
suppression on
  data length is 0
  text length is 0
